updated porte-folio with Nyx library reference

--- a/MyPorteFolio/PorteFolio.rwsw/Contents.plist
+++ b/MyPorteFolio/PorteFolio.rwsw/Contents.plist
@@ -11,6 +11,8 @@
 		<dict>
 			<key>Dictionary</key>
 			<dict>
+				<key>PublishingManifest</key>
+				<dict/>
 				<key>Site Resources</key>
 				<data>
 				YnBsaXN0MDDUAQIDBAUIVVZUJHRvcFgkb2JqZWN0c1gk
