fixed some spelling errors

--- a/Nyx/Nyx.rwsw/Pages/2-Documentation/Contents.plist
+++ b/Nyx/Nyx.rwsw/Pages/2-Documentation/Contents.plist
@@ -22,6 +22,8 @@
 					<key>Name</key>
 					<string>iFrame</string>
 				</dict>
+				<key>PublishingManifest</key>
+				<dict/>
 			</dict>
 			<key>Files</key>
 			<array/>
