--- a/Nyx/Nyx.rwsw/Pages/5-Download/PageAttributes/Contents.plist
+++ b/Nyx/Nyx.rwsw/Pages/5-Download/PageAttributes/Contents.plist
@@ -9,6 +9,8 @@
 			<dict>
 				<key>Changed</key>
 				<false/>
+				<key>ColourStyles</key>
+				<dict/>
 				<key>CreditRapidWeaver</key>
 				<true/>
 				<key>CustomCopyrightUsed</key>
