updated website with new theme and version 1.0.2 of NyxTraceViewer

--- a/NyxTraceViewer/NyxTraceViewer.rwsw/Contents.plist
+++ b/NyxTraceViewer/NyxTraceViewer.rwsw/Contents.plist
@@ -15,118 +15,188 @@
 				<dict/>
 				<key>Site Resources</key>
 				<data>
-				YnBsaXN0MDDUAQIDBAUI7e5UJHRvcFgkb2JqZWN0c1gk
-				dmVyc2lvblkkYXJjaGl2ZXLRBgdUcm9vdIABrxAyCQoR
-				HSM1OT1ESElKTlFVX2JlZmdqdHd6e3x/g46SnKSnq7C2
-				u77Cx8rO2Nna29/j5+tVJG51bGzSCwwNDlYkY2xhc3Na
-				TlMub2JqZWN0c4Axog8QgAKAIdYSEwsUFRYXGBkaGxxY
-				UGFnZSBNYXBZUmVzb3VyY2VzWFBhdGggTWFwXklkZW50
-				aWZpZXIgTWFwWE5vZGUgTWFwgCiAA4AwgCmAG4Ad0gsM
-				Hh+AGqMgISKABIAOgBTZJCULJicoKSorLC0uLzAxLy80
-				V0NoYW5nZWRVQWxpYXNcUHVibGlzaGVkVVJMVE5hbWVa
-				SWRlbnRpZmllclRTbHVnXVB1Ymxpc2hlZERhdGVZVGlt
-				ZVN0YW1wCIAFgA2AAIAKgAmAAIAAgAvSCzY3OFIkMIAI
-				gAbSOgs7PFdOUy5kYXRhTxECDAAAAAACDAACAAAMTWFj
-				aW50b3NoIEhEAAAAAAAAAAAAAAAAAAAAyGw5kEgrAAAB
-				KEN5Fk55eFRyYWNlVmlld2VyX3g4Ni56aXAAAAAAAAAA
-				AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-				AAEoQ4XMINq9AAAAAAAAAAD/////AAAJIAAAAAAAAAAA
-				AAAAAAAAAAdXaW5kb3dzAAAQAAgAAMhscdAAAAARAAgA
-				AMwhEv0AAAABACABKEN5AShDeAEUx1AAmSumASzURQAI
-				/B8ACMB3AACTBgACAG1NYWNpbnRvc2ggSEQ6VXNlcnM6
-				AGRhbm55dDoAZGV2OgBvbGQ6AEphdmFGb3JnZToAVHJh
-				Y2VWaWV3ZXJCaW5hcmllczoAdjFfMF8xOgBXaW5kb3dz
-				OgBOeXhUcmFjZVZpZXdlcl94ODYuemlwAAAOAC4AFgBO
-				AHkAeABUAHIAYQBjAGUAVgBpAGUAdwBlAHIAXwB4ADgA
-				NgAuAHoAaQBwAA8AGgAMAE0AYQBjAGkAbgB0AG8AcwBo
-				ACAASABEABIAWFVzZXJzL2Rhbm55dC9kZXYvb2xkL0ph
-				dmFGb3JnZS9UcmFjZVZpZXdlckJpbmFyaWVzL3YxXzBf
-				MS9XaW5kb3dzL055eFRyYWNlVmlld2VyX3g4Ni56aXAA
-				EwABLwAAFQACAA3//wAAgAfSPj9AQVgkY2xhc3Nlc1ok
-				Y2xhc3NuYW1lo0FCQ11OU011dGFibGVEYXRhVk5TRGF0
-				YVhOU09iamVjdNI+P0VHokZDV0JEQWxpYXNXQkRBbGlh
-				c18QJEEwQjVENkQ2LTEzRjUtNEYwMC05RDA2LUVBMjlE
-				NjBFM0Y1QV8QFk55eFRyYWNlVmlld2VyX3g4Ni56aXDS
-				C0tMTVdOUy50aW1lgAwjQbXAus301SDSPj9PUKJQQ1ZO
-				U0RhdGXSPj9SVKJTQ15SV1NpdGVSZXNvdXJjZV5SV1Np
-				dGVSZXNvdXJjZdkkJQsmJygpKissVy4vWlsvL14IgA+A
-				DYAAgBKAEYAAgACAE9ILNjdhgAiAENI6C2M8TxECAgAA
-				AAACAgACAAAMTWFjaW50b3NoIEhEAAAAAAAAAAAAAAAA
-				AAAAyGw5kEgrAAABFM7JFU55eFRyYWNlVmlld2VyLnRh
-				ci5negAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-				AAAAAAAAAAAAAAAAAAEVCBvMFzu0AAAAAAAAAAD/////
-				AAAJIAAAAAAAAAAAAAAAAAAAAAVMaW51eAAAEAAIAADI
-				bHHQAAAAEQAIAADMF3P0AAAAAQAgARTOyQEUx6EBFMdQ
-				AJkrpgEs1EUACPwfAAjAdwAAkwYAAgBqTWFjaW50b3No
-				IEhEOlVzZXJzOgBkYW5ueXQ6AGRldjoAb2xkOgBKYXZh
-				Rm9yZ2U6AFRyYWNlVmlld2VyQmluYXJpZXM6AHYxXzBf
-				MDoATGludXg6AE55eFRyYWNlVmlld2VyLnRhci5negAO
-				ACwAFQBOAHkAeABUAHIAYQBjAGUAVgBpAGUAdwBlAHIA
-				LgB0AGEAcgAuAGcAegAPABoADABNAGEAYwBpAG4AdABv
-				AHMAaAAgAEgARAASAFVVc2Vycy9kYW5ueXQvZGV2L29s
-				ZC9KYXZhRm9yZ2UvVHJhY2VWaWV3ZXJCaW5hcmllcy92
-				MV8wXzAvTGludXgvTnl4VHJhY2VWaWV3ZXIudGFyLmd6
-				AAATAAEvAAAVAAIADf//AACAB18QJEZDMThCODZGLUU2
-				NzQtNDI0MS1COTVGLTg3MTlEODg4MjNDQl8QGU55eFRy
-				YWNlVmlld2VyX3g2NC50YXIuZ3rSC0tMaYAMI0G1wLrI
-				aIOZ2SQlCyYnKCkqKyxsLi9vcC8vcwiAFYANgACAGIAX
-				gACAAIAZ0gs2N3aACIAW0joLeDxPEQHwAAAAAAHwAAIA
-				AAxNYWNpbnRvc2ggSEQAAAAAAAAAAAAAAAAAAADIbDmQ
-				SCsAAAEUx6QSTnl4VHJhY2VWaWV3ZXIuZG1nAAAAAAAA
-				AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
-				AAAAAAAAARUiKswXWhhkZXZyZGRza/////8AAAkgAAAA
-				AAAAAAAAAAAAAAAAA09TWAAAEAAIAADIbHHQAAAAEQAI
-				AADMF5JYAAAAAQAgARTHpAEUx6EBFMdQAJkrpgEs1EUA
-				CPwfAAjAdwAAkwYAAgBlTWFjaW50b3NoIEhEOlVzZXJz
-				OgBkYW5ueXQ6AGRldjoAb2xkOgBKYXZhRm9yZ2U6AFRy
-				YWNlVmlld2VyQmluYXJpZXM6AHYxXzBfMDoAT1NYOgBO
-				eXhUcmFjZVZpZXdlci5kbWcAAA4AJgASAE4AeQB4AFQA
-				cgBhAGMAZQBWAGkAZQB3AGUAcgAuAGQAbQBnAA8AGgAM
-				AE0AYQBjAGkAbgB0AG8AcwBoACAASABEABIAUFVzZXJz
-				L2Rhbm55dC9kZXYvb2xkL0phdmFGb3JnZS9UcmFjZVZp
-				ZXdlckJpbmFyaWVzL3YxXzBfMC9PU1gvTnl4VHJhY2VW
-				aWV3ZXIuZG1nABMAAS8AABUAAgAN//8AAIAHXxAkNjAw
-				ODczM0UtMjBCNi00Nzg2LThFOEQtNDQxQ0FFMEFBRkFG
-				XxAWTnl4VHJhY2VWaWV3ZXJfeDY0LmRtZ9ILS0x+gAwj
-				QbXAus29g7bSPj+AgaOBgkNcTlNNdXRhYmxlU2V0VU5T
-				U2V00wwLhIWJildOUy5rZXlzoyEiIIAOgBSABIAco1tw
-				MYARgBeACdI+P4+Qo5CRQ18QE05TTXV0YWJsZURpY3Rp
-				b25hcnlcTlNEaWN0aW9uYXJ50wwLhJOJmKOUlZaAHoAj
-				gCaAHKNbcDGAEYAXgAnUnZ6fCxChIaNWUGFyZW50WENo
-				aWxkcmVuXxASUmVwcmVzZW50ZWQgT2JqZWN0gCGAH4AO
-				gCXSCwylpoAgoNI+P6ipo6mqQ15OU011dGFibGVBcnJh
-				eVdOU0FycmF51J2enwsvrS+jgACAIoAAgCXSCwylsoAg
-				o5SVloAegCOAJtSdnp8LELgio4AhgCSAFIAl0gsMpb2A
-				IKDSPj+/waLAQ18QEFJXU291cmNlTGlzdE5vZGVfEBBS
-				V1NvdXJjZUxpc3ROb2Rl1J2enwsQxCCjgCGAJ4AEgCXS
-				CwylyYAgoNMMC4TLic2ggByg0wwLhM+J1KPQ0dKALYAu
-				gC+AHKPV1teAKoArgCxfEE0vVXNlcnMvZGFubnl0L2Rl
-				di9KYXZhRm9yZ2UvVHJhY2VWaWV3ZXJCaW5hcmllcy92
-				MV8wXzAvT1NYL055eFRyYWNlVmlld2VyLmRtZ18QVS9V
-				c2Vycy9kYW5ueXQvZGV2L0phdmFGb3JnZS9UcmFjZVZp
-				ZXdlckJpbmFyaWVzL3YxXzBfMS9XaW5kb3dzL055eFRy
-				YWNlVmlld2VyX3g4Ni56aXBfEFIvVXNlcnMvZGFubnl0
-				L2Rldi9KYXZhRm9yZ2UvVHJhY2VWaWV3ZXJCaW5hcmll
-				cy92MV8wXzAvTGludXgvTnl4VHJhY2VWaWV3ZXIudGFy
-				Lmd60gsMHt2AGqEigBTSCwwe4YAaoSCABNILDB7lgBqh
-				IYAO0j4/6Oqi6UNfEBJSV1Jlc291cmNlRGF0YWJhc2Vf
-				EBJSV1Jlc291cmNlRGF0YWJhc2XSPj/sqqKqQxIAAYag
-				XxAPTlNLZXllZEFyY2hpdmVyAAgAEQAWAB8AKAAyADUA
-				OgA8AHEAdwB8AIMAjgCQAJMAlQCXAKQArQC3AMAAzwDY
-				ANoA3ADeAOAA4gDkAOkA6wDvAPEA8wD1AQgBEAEWASMB
-				KAEzATgBRgFQAVEBUwFVAVcBWQFbAV0BXwFhAWYBaQFr
-				AW0BcgF6A4oDjAORA5oDpQOpA7cDvgPHA8wDzwPXA98E
-				BgQfBCQELAQuBDcEPAQ/BEYESwROBF0EbAR/BIAEggSE
-				BIYEiASKBIwEjgSQBJUElwSZBJ4GpAamBs0G6QbuBvAG
-				+QcMBw0HDwcRBxMHFQcXBxkHGwcdByIHJAcmBysJHwkh
-				CUgJYQlmCWgJcQl2CXoJhwmNCZQJnAmgCaIJpAmmCagJ
-				rAmuCbAJsgm3CbsJ0QneCeUJ6QnrCe0J7wnxCfUJ9wn5
-				CfsKBAoLChQKKQorCi0KLwoxCjYKOAo5Cj4KQgpRClkK
-				YgpkCmYKaApqCm8KcQp1CncKeQp7CoQKhgqICooKjAqR
-				CpMKlAqZCpwKrwrCCssKzQrPCtEK0wrYCtoK2wriCuMK
-				5QrmCu0K8QrzCvUK9wr5Cv0K/wsBCwMLUwurDAAMBQwH
-				DAkMCwwQDBIMFAwWDBsMHQwfDCEMJgwpDD4MUwxYDFsM
-				YAAAAAAAAAIBAAAAAAAAAO8AAAAAAAAAAAAAAAAAAAxy
+				YnBsaXN0MDDUAAEAAgADAAQABQAIAUEBQlQkdG9wWCRv
+				YmplY3RzWCR2ZXJzaW9uWSRhcmNoaXZlctEABgAHVHJv
+				b3SAAa8QRgAJAAoAEQAdACUANwA7AD8ARgBKAEsATABQ
+				AFMAVwBhAGQAZwBoAGkAbAB2AHkAfAB9AH4AgQCLAI4A
+				kQCSAJMAlgCgAKMApgCnAKgAqwCvAL4AwgDQANgA2wDf
+				AOQA7ADxAPQA+AD9AQABBQEIAQ0BEAEUASIBIwEkASUB
+				JgEnASsBLwEzATcBOwE/VSRudWxs0gALAAwADQAOViRj
+				bGFzc1pOUy5vYmplY3RzgEWiAA8AEIACgC3WABIAEwAL
+				ABQAFQAWABcAGAAZABoAGwAcWFBhZ2UgTWFwWVJlc291
+				cmNlc1hQYXRoIE1hcF5JZGVudGlmaWVyIE1hcFhOb2Rl
+				IE1hcIA4gAOARIA5gCeAKdIACwAMAB4AH4AmpQAgACEA
+				IgAjACSABIAOgBSAGoAg2QAmACcACwAoACkAKgArACwA
+				LQAuAC8AMAAxADIAMwAxADEANldDaGFuZ2VkVUFsaWFz
+				XFB1Ymxpc2hlZFVSTFROYW1lWklkZW50aWZpZXJUU2x1
+				Z11QdWJsaXNoZWREYXRlWVRpbWVTdGFtcAiABYANgACA
+				CoAJgACAAIAL0gALADgAOQA6UiQwgAiABtIAPAALAD0A
+				PldOUy5kYXRhTxECBgAAAAACBgACAAAMTWFjaW50b3No
+				IEhEAAAAAAAAAAAAAAAAAAAAyGw5kEgrAAABRIa4HE55
+				eFRyYWNlVmlld2VyX3g4Nl8xXzBfMi56aXAAAAAAAAAA
+				AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAFEhrnM
+				UGmDAAAAAAAAAAD/////AAAJIAAAAAAAAAAAAAAAAAAA
+				AAN4ODYAABAACAAAyGxx0AAAABEACAAAzFChwwAAAAEA
+				HAFEhrgBQ5Y8AUOX+AFDTPYACPwfAAjAdwAAkwYAAgBo
+				TWFjaW50b3NoIEhEOlVzZXJzOgBkYW5ueXQ6AGRldjoA
+				VHJhY2VWaWV3ZXJCaW5hcmllczoAdjEuMC4yOgBXaW5k
+				b3dzOgB4ODY6AE55eFRyYWNlVmlld2VyX3g4Nl8xXzBf
+				Mi56aXAADgA6ABwATgB5AHgAVAByAGEAYwBlAFYAaQBl
+				AHcAZQByAF8AeAA4ADYAXwAxAF8AMABfADIALgB6AGkA
+				cAAPABoADABNAGEAYwBpAG4AdABvAHMAaAAgAEgARAAS
+				AFRVc2Vycy9kYW5ueXQvZGV2L1RyYWNlVmlld2VyQmlu
+				YXJpZXMvdjEuMC4yL1dpbmRvd3MveDg2L055eFRyYWNl
+				Vmlld2VyX3g4Nl8xXzBfMi56aXAAEwABLwAAFQACAA3/
+				/wAAgAfSAEAAQQBCAENYJGNsYXNzZXNaJGNsYXNzbmFt
+				ZaMAQwBEAEVdTlNNdXRhYmxlRGF0YVZOU0RhdGFYTlNP
+				YmplY3TSAEAAQQBHAEmiAEgARVdCREFsaWFzV0JEQWxp
+				YXNfECQ2RDk0REVDOC04N0NGLTQ1MEMtOUZEOC1EOTFB
+				ODUwMzU5NURfEBxOeXhUcmFjZVZpZXdlcl94ODZfMV8w
+				XzIuemlw0gALAE0ATgBPV05TLnRpbWWADCNBtd3TC7Zo
+				09IAQABBAFEAUqIAUgBFVk5TRGF0ZdIAQABBAFQAVqIA
+				VQBFXlJXU2l0ZVJlc291cmNlXlJXU2l0ZVJlc291cmNl
+				2QAmACcACwAoACkAKgArACwALQAuAFkAMAAxAFwAXQAx
+				ADEAYAiAD4ANgACAEoARgACAAIAT0gALADgAOQBjgAiA
+				ENIAPAALAGUAPk8RAeIAAAAAAeIAAgAADE1hY2ludG9z
+				aCBIRAAAAAAAAAAAAAAAAAAAAMhsOZBIKwAAAUUhQhhO
+				eXhUcmFjZVZpZXdlcl8xXzBfMi5kbWcAAAAAAAAAAAAA
+				AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABRSM2
+				zFMGd2RldnJkZHNr/////wAACSAAAAAAAAAAAAAAAAAA
+				AAADT1NYAAAQAAgAAMhscdAAAAARAAgAAMxTPrcAAAAB
+				ABgBRSFCAUOX+AFDTPYACPwfAAjAdwAAkwYAAgBbTWFj
+				aW50b3NoIEhEOlVzZXJzOgBkYW5ueXQ6AGRldjoAVHJh
+				Y2VWaWV3ZXJCaW5hcmllczoAdjEuMC4yOgBPU1g6AE55
+				eFRyYWNlVmlld2VyXzFfMF8yLmRtZwAADgAyABgATgB5
+				AHgAVAByAGEAYwBlAFYAaQBlAHcAZQByAF8AMQBfADAA
+				XwAyAC4AZABtAGcADwAaAAwATQBhAGMAaQBuAHQAbwBz
+				AGgAIABIAEQAEgBIVXNlcnMvZGFubnl0L2Rldi9UcmFj
+				ZVZpZXdlckJpbmFyaWVzL3YxLjAuMi9PU1gvTnl4VHJh
+				Y2VWaWV3ZXJfMV8wXzIuZG1nABMAAS8AABUAAgAN//8A
+				AIAHXxAkNjU4OEJDNzQtOUFEQy00MDE1LUI0RkQtMkEy
+				OTY1OURFRDIyXxAYTnl4VHJhY2VWaWV3ZXJfMV8wXzIu
+				ZG1n0gALAE0ATgBrgAwjQbXd0xDIEs/ZACYAJwALACgA
+				KQAqACsALAAtAC4AbgAwADEAcQByADEAMQB1CIAVgA2A
+				AIAYgBeAAIAAgBnSAAsAOAA5AHiACIAW0gA8AAsAegA+
+				TxECBgAAAAACBgACAAAMTWFjaW50b3NoIEhEAAAAAAAA
+				AAAAAAAAAAAAyGw5kEgrAAABRIarHE55eFRyYWNlVmll
+				d2VyX3g2NF8xXzBfMi56aXAAAAAAAAAAAAAAAAAAAAAA
+				AAAAAAAAAAAAAAAAAAAAAAAAAAFEhqzMUGnGAAAAAAAA
+				AAD/////AAAJIAAAAAAAAAAAAAAAAAAAAAN4NjQAABAA
+				CAAAyGxx0AAAABEACAAAzFCiBgAAAAEAHAFEhqsBQ5Y8
+				AUOX+AFDTPYACPwfAAjAdwAAkwYAAgBoTWFjaW50b3No
+				IEhEOlVzZXJzOgBkYW5ueXQ6AGRldjoAVHJhY2VWaWV3
+				ZXJCaW5hcmllczoAdjEuMC4yOgBXaW5kb3dzOgB4NjQ6
+				AE55eFRyYWNlVmlld2VyX3g2NF8xXzBfMi56aXAADgA6
+				ABwATgB5AHgAVAByAGEAYwBlAFYAaQBlAHcAZQByAF8A
+				eAA2ADQAXwAxAF8AMABfADIALgB6AGkAcAAPABoADABN
+				AGEAYwBpAG4AdABvAHMAaAAgAEgARAASAFRVc2Vycy9k
+				YW5ueXQvZGV2L1RyYWNlVmlld2VyQmluYXJpZXMvdjEu
+				MC4yL1dpbmRvd3MveDY0L055eFRyYWNlVmlld2VyX3g2
+				NF8xXzBfMi56aXAAEwABLwAAFQACAA3//wAAgAdfECQ1
+				M0YzOEZFQS04QjQzLTRFNzQtQjdBRi0zRDk5Nzg5RjUz
+				RENfEBxOeXhUcmFjZVZpZXdlcl94NjRfMV8wXzIuemlw
+				0gALAE0ATgCAgAwjQbXd0wt8yM3ZACYAJwALACgAKQAq
+				ACsALAAtAC4AgwAwADEAhgCHADEAMQCKCIAbgA2AAIAe
+				gB2AAIAAgB/SAAsAOAA5AI2ACIAc0gA8AAsAjwA+TxEC
+				EAAAAAACEAACAAAMTWFjaW50b3NoIEhEAAAAAAAAAAAA
+				AAAAAAAAyGw5kEgrAAABRIKsH055eFRyYWNlVmlld2Vy
+				X3g4Nl8xXzBfMi50YXIuZ3oAAAAAAAAAAAAAAAAAAAAA
+				AAAAAAAAAAAAAAAAAAAAAAFEgq7MUGNEAAAAAAAAAAD/
+				////AAAJIAAAAAAAAAAAAAAAAAAAAAN4ODYAABAACAAA
+				yGxx0AAAABEACAAAzFCbhAAAAAEAHAFEgqwBQ8L3AUOX
+				+AFDTPYACPwfAAjAdwAAkwYAAgBpTWFjaW50b3NoIEhE
+				OlVzZXJzOgBkYW5ueXQ6AGRldjoAVHJhY2VWaWV3ZXJC
+				aW5hcmllczoAdjEuMC4yOgBMaW51eDoAeDg2OgBOeXhU
+				cmFjZVZpZXdlcl94ODZfMV8wXzIudGFyLmd6AAAOAEAA
+				HwBOAHkAeABUAHIAYQBjAGUAVgBpAGUAdwBlAHIAXwB4
+				ADgANgBfADEAXwAwAF8AMgAuAHQAYQByAC4AZwB6AA8A
+				GgAMAE0AYQBjAGkAbgB0AG8AcwBoACAASABEABIAVVVz
+				ZXJzL2Rhbm55dC9kZXYvVHJhY2VWaWV3ZXJCaW5hcmll
+				cy92MS4wLjIvTGludXgveDg2L055eFRyYWNlVmlld2Vy
+				X3g4Nl8xXzBfMi50YXIuZ3oAABMAAS8AABUAAgAN//8A
+				AIAHXxAkOTdEQTY1NUUtMzFBRC00Rjg5LUE2MTctRjk2
+				MDE1QzNCMzMyXxAfTnl4VHJhY2VWaWV3ZXJfeDg2XzFf
+				MF8yLnRhci5netIACwBNAE4AlYAMI0G13dMRZFew2QAm
+				ACcACwAoACkAKgArACwALQAuAJgAMAAxAJsAnAAxADEA
+				nwiAIYANgACAJIAjgACAAIAl0gALADgAOQCigAiAItIA
+				PAALAKQAPk8RAhAAAAAAAhAAAgAADE1hY2ludG9zaCBI
+				RAAAAAAAAAAAAAAAAAAAAMhsOZBIKwAAAUPC+R9OeXhU
+				cmFjZVZpZXdlcl94NjRfMV8wXzIudGFyLmd6AAAAAAAA
+				AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABRHlgzFBN
+				QQAAAAAAAAAA/////wAACSAAAAAAAAAAAAAAAAAAAAAD
+				eDY0AAAQAAgAAMhscdAAAAARAAgAAMxQhYEAAAABABwB
+				Q8L5AUPC9wFDl/gBQ0z2AAj8HwAIwHcAAJMGAAIAaU1h
+				Y2ludG9zaCBIRDpVc2VyczoAZGFubnl0OgBkZXY6AFRy
+				YWNlVmlld2VyQmluYXJpZXM6AHYxLjAuMjoATGludXg6
+				AHg2NDoATnl4VHJhY2VWaWV3ZXJfeDY0XzFfMF8yLnRh
+				ci5negAADgBAAB8ATgB5AHgAVAByAGEAYwBlAFYAaQBl
+				AHcAZQByAF8AeAA2ADQAXwAxAF8AMABfADIALgB0AGEA
+				cgAuAGcAegAPABoADABNAGEAYwBpAG4AdABvAHMAaAAg
+				AEgARAASAFVVc2Vycy9kYW5ueXQvZGV2L1RyYWNlVmll
+				d2VyQmluYXJpZXMvdjEuMC4yL0xpbnV4L3g2NC9OeXhU
+				cmFjZVZpZXdlcl94NjRfMV8wXzIudGFyLmd6AAATAAEv
+				AAAVAAIADf//AACAB18QJDFFRTVGMzE5LUVCNDctNDhF
+				NS1COERFLUUxM0U4OTIwN0Y4RV8QH055eFRyYWNlVmll
+				d2VyX3g2NF8xXzBfMi50YXIuZ3rSAAsATQBOAKqADCNB
+				td3TEgSBCtIAQABBAKwAraMArQCuAEVcTlNNdXRhYmxl
+				U2V0VU5TU2V00wAMAAsAsACxALcAuFdOUy5rZXlzpQAh
+				ACMAJAAgACKADoAagCCABIAUgCilAF0AhwCcADMAcoAR
+				gB2AI4AJgBfSAEAAQQC/AMCjAMAAwQBFXxATTlNNdXRh
+				YmxlRGljdGlvbmFyeVxOU0RpY3Rpb25hcnnTAAwACwCw
+				AMMAtwDKpQDEAMUAxgDHAMiAKoA0gDaAMoAvgCilAF0A
+				hwCcADMAcoARgB2AI4AJgBfUANEA0gDTAAsAEADVACEA
+				11ZQYXJlbnRYQ2hpbGRyZW5fEBJSZXByZXNlbnRlZCBP
+				YmplY3SALYArgA6AMdIACwAMANkA2oAsoNIAQABBANwA
+				3aMA3QDeAEVeTlNNdXRhYmxlQXJyYXlXTlNBcnJhedQA
+				0QDSANMACwAxAOEAMQDXgACALoAAgDHSAAsADADZAOaA
+				LKUAyADHAMQAxQDGgC+AMoAqgDSANtQA0QDSANMACwAQ
+				AO4AIgDXgC2AMIAUgDHSAAsADADZAPOALKDSAEAAQQD1
+				APeiAPYARV8QEFJXU291cmNlTGlzdE5vZGVfEBBSV1Nv
+				dXJjZUxpc3ROb2Rl1ADRANIA0wALABAA+gAgANeALYAz
+				gASAMdIACwAMANkA/4AsoNQA0QDSANMACwAQAQIAIwDX
+				gC2ANYAagDHSAAsADADZAQeALKDUANEA0gDTAAsAEAEK
+				ACQA14AtgDeAIIAx0gALAAwA2QEPgCyg0wAMAAsAsAER
+				ALcBE6CAKKDTAAwACwCwARUAtwEcpQEWARcBGAEZARqA
+				P4BAgEGAQoBDgCilAR0BHgEfASABIYA6gDuAPIA9gD5f
+				EFUvVXNlcnMvZGFubnl0L2Rldi9UcmFjZVZpZXdlckJp
+				bmFyaWVzL3YxLjAuMi9XaW5kb3dzL3g2NC9OeXhUcmFj
+				ZVZpZXdlcl94NjRfMV8wXzIuemlwXxBJL1VzZXJzL2Rh
+				bm55dC9kZXYvVHJhY2VWaWV3ZXJCaW5hcmllcy92MS4w
+				LjIvT1NYL055eFRyYWNlVmlld2VyXzFfMF8yLmRtZ18Q
+				Vi9Vc2Vycy9kYW5ueXQvZGV2L1RyYWNlVmlld2VyQmlu
+				YXJpZXMvdjEuMC4yL0xpbnV4L3g4Ni9OeXhUcmFjZVZp
+				ZXdlcl94ODZfMV8wXzIudGFyLmd6XxBWL1VzZXJzL2Rh
+				bm55dC9kZXYvVHJhY2VWaWV3ZXJCaW5hcmllcy92MS4w
+				LjIvTGludXgveDY0L055eFRyYWNlVmlld2VyX3g2NF8x
+				XzBfMi50YXIuZ3pfEFUvVXNlcnMvZGFubnl0L2Rldi9U
+				cmFjZVZpZXdlckJpbmFyaWVzL3YxLjAuMi9XaW5kb3dz
+				L3g4Ni9OeXhUcmFjZVZpZXdlcl94ODZfMV8wXzIuemlw
+				0gALAAwAHgEpgCahACKAFNIACwAMAB4BLYAmoQAhgA7S
+				AAsADAAeATGAJqEAI4Aa0gALAAwAHgE1gCahACSAINIA
+				CwAMAB4BOYAmoQAggATSAEAAQQE8AT6iAT0ARV8QElJX
+				UmVzb3VyY2VEYXRhYmFzZV8QElJXUmVzb3VyY2VEYXRh
+				YmFzZdIAQABBAUAA3qIA3gBFEgABhqBfEA9OU0tleWVk
+				QXJjaGl2ZXIACAAZAB4AJwAwADoAPwBEAEYA1QDbAOQA
+				6wD2APgA/QD/AQEBGgEjAS0BNgFFAU4BUAFSAVQBVgFY
+				AVoBYwFlAXABcgF0AXYBeAF6AZ8BpwGtAboBvwHKAc8B
+				3QHnAegB6gHsAe4B8AHyAfQB9gH4AgECBAIGAggCEQIZ
+				BCMEJQQuBDcEQgRJBFcEXgRnBHAEdQR9BIUErATLBNQE
+				3ATeBOcE8AT1BPwFBQUKBRkFKAVNBU4FUAVSBVQFVgVY
+				BVoFXAVeBWcFaQVrBXQHWgdcB4MHngenB6kHsgfXB9gH
+				2gfcB94H4AfiB+QH5gfoB/EH8wf1B/4KCAoKCjEKUApZ
+				ClsKZAqJCooKjAqOCpAKkgqUCpYKmAqaCqMKpQqnCrAM
+				xAzGDO0NDw0YDRoNIw1IDUkNSw1NDU8NUQ1TDVUNVw1Z
+				DWINZA1mDW8Pgw+FD6wPzg/XD9kP4g/rD/IP/xAFEBIQ
+				GhAlECcQKRArEC0QLxAxEDwQPhBAEEIQRBBGEE8QVhBs
+				EHkQhhCREJMQlRCXEJkQmxCdEKgQqhCsEK4QsBCyEMMQ
+				yhDTEOgQ6hDsEO4Q8BD5EPsQ/BEFEQwRGxEjETQRNhE4
+				EToRPBFFEUcRUhFUEVYRWBFaEVwRbRFvEXERcxF1EX4R
+				gBGBEYoRjxGiEbURxhHIEcoRzBHOEdcR2RHaEesR7RHv
+				EfER8xH8Ef4R/xIQEhISFBIWEhgSIRIjEiQSMRIyEjQS
+				NRJCEk0STxJRElMSVRJXElkSZBJmEmgSahJsEm4SxhMS
+				E2sTxBQcFCUUJxQqFCwUNRQ3FDoUPBRFFEcUShRMFFUU
+				VxRaFFwUZRRnFGoUbBR1FHoUjxSkFK0UshS3AAAAAAAA
+				AgIAAAAAAAABQwAAAAAAAAAAAAAAAAAAFMk=
 				</data>
 				<key>SiteAttributes</key>
 				<dict>
@@ -181,7 +251,7 @@
 					<key>PublishingSettingsConfigured</key>
 					<false/>
 					<key>ShowBreadcrumbTrail</key>
-					<true/>
+					<false/>
 					<key>ShowTidiedCode</key>
 					<false/>
 					<key>SloganText</key>
@@ -189,7 +259,7 @@
 					<key>SloganUsed</key>
 					<false/>
 					<key>ThemeName</key>
-					<string>Interslice</string>
+					<string>Possible</string>
 					<key>TitleText</key>
 					<string>NyxTraceViewer</string>
 					<key>TitleTextUsed</key>
