--- a/NyxTraceViewer/NyxTraceViewer.rwsw/Pages/1-About/PageAttributes/Contents.plist
+++ b/NyxTraceViewer/NyxTraceViewer.rwsw/Pages/1-About/PageAttributes/Contents.plist
@@ -82,6 +82,12 @@
 						<string>Sidebar.Right</string>
 						<string>Width.Variable</string>
 					</array>
+					<key>Possible</key>
+					<array>
+						<string>Sidebar.Hide</string>
+						<string>Styles.Orange</string>
+						<string>Width.1000px</string>
+					</array>
 					<key>Sharp</key>
 					<array>
 						<string>Sidebar.Right</string>
